Added Personal Sandbox scene to gitignore file

--- a/GDB229-O/.gitignore
+++ b/GDB229-O/.gitignore
@@ -74,3 +74,4 @@ crashlytics-build.properties
 # Sandbox Scenes
 /[Aa]ssets/[Ss]cenes/Corbin's Sandbox*
 /[Aa]ssets/[Ss]cenes/JaitenSandbox*
+/[Aa]ssets/[Ss]cenes/Brandon's Sandbox*
