Added testScene and personal sandbox
Oriented player and added grass colour floor
updated git ignore

--- a/GDB229-O/.gitignore
+++ b/GDB229-O/.gitignore
@@ -75,3 +75,4 @@ crashlytics-build.properties
 /[Aa]ssets/[Ss]cenes/Corbin's Sandbox*
 /[Aa]ssets/[Ss]cenes/JaitenSandbox*
 /[Aa]ssets/[Ss]cenes/Brandon's Sandbox*
+/[Aa]ssets/[Ss]cenes/MysticalSandbox*
